--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 
 [[constraint]]
   name = "github.com/ethereum/go-ethereum"
-  version = "1.8.19"
+  version = "1.8.11"
 
 [[constraint]]
   name = "github.com/golang/protobuf"
@@ -40,11 +40,7 @@
 [[constraint]]
   name = "github.com/pkg/errors"
   version = "0.8.0"
-
-[[constraint]]
-  branch = "master"
-  name = "github.com/singnet/reputation"
-
+  
 [[constraint]]
   name = "google.golang.org/grpc"
   version = "1.17.0"
@@ -54,7 +50,7 @@
   unused-packages = true
 
 [metadata.heroku]
-  root-package = "github.com/singnet/reputation"
+  root-package = "github.com/singnet/reputation-adapter"
   go-version = "1.11.2"
   ensure = "false"
   install = [ "./..." ]
